# sql_al

./: main.py  pyproject.toml  sqlalchemy_test.db
app/db/: models.py
app/templates/: add_employee.html  add_position.html  base.html  index.html  navigation.html
