[tool.poetry]
name = "sql-al"
version = "0.1.0"
description = ""
authors = ["Vlad049 <vladbuksa7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
